--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+timezone: America/Toronto
 markdown: redcarpet
 highlighter: pygments
 permalink: /post/:title
@@ -13,7 +14,7 @@ url:
 baseurl:
 
 redcarpet:
-  extensions: [strikethrough, tables]
+  extensions: [strikethrough, tables, autolink]
 
 sass:
   sass_dir: public/css
