--- a/_data/brume.yml
+++ b/_data/brume.yml
@@ -1,3 +1,3 @@
-name: Brume
-author: Aigars Dzerviniks
-description: It's simple. It's easy to use. It's a Jekyll theme.
+name: HEINSM
+author: mike
+description: A blog (themed from Aigars Dzerviniks - BRUME)
