--- a/_config.yml
+++ b/_config.yml
@@ -32,3 +32,11 @@ author:
     name: mike
     github_link: https://github.com/heinsm
     twitter_link: (none)
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
+      published: True
