--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,24 @@
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:categories/:year/:month/:day/:title 
+
+timezone: America/Toronto
+markdown: redcarpet
+highlighter: pygments
+permalink: /:categories/:year/:month/:day/:title
+relative_permalinks: true
+
+paginate: 5
+paginate_path: '/blog/:num'
+
+excerpt_separator: "\n\n\n"
+
+url:
+baseurl:
+
+redcarpet:
+  extensions: [strikethrough, tables, autolink]
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-highlighter: pygments
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
@@ -11,7 +26,7 @@ highlighter: pygments
 title : A blog
 tagline: A blog
 author :
-  name : mike
+  name : heinsm
   email : null
   github : heinsm
   twitter : null
